--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,18 +5,21 @@
  */
 
  body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif !important;
     color: white;
 
+  }
+  html, body {
+    border: 0px;
+    margin: 0px;
+    padding: 0px;
   }
   
    header {
     padding: 156px 0 100px;
   }
 
-  .header1 {
-    height: 200px;
-  }
+
   
   section {
     padding: 150px 0;
@@ -39,6 +42,7 @@
   .card-group{
    display: flex;
    justify-content: space-between;
+   
   
   }
   
@@ -46,6 +50,4 @@
     color: white;
   
   }
-  
-  
-  
+
