--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Scrolling Nav (https://startbootstrap.com/template-overviews/scrolling-nav)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
- */
-
  body {
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
     color: white;
@@ -50,4 +44,8 @@
   .disable-link{
     color: white;
   
+  }
+
+  .btn {
+    width: 50px;
   }
