--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@ body {
     padding-bottom:[footer-height]
 }
 .footer {
-    position: fixed;
+    position: relative;
     left: 0 ; right: 0; bottom: 0;
+  height: 10px;
 
 }
